--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,5 @@ uuid = { version = "1.3", features = ["v4"] }
 clickhouse = "0.13.1"
 serde = { version = "1.0.217", features = ["derive"] }
 chrono = { version = "0.4", features = ["serde"] }
+hyper-util = { version = "0.1", features = ["client", "client-legacy", "tokio"] }
+hyper = { version = "1.1", features = ["client", "http1"] }
