--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ serde = { version = "1.0.217", features = ["derive"] }
 chrono = { version = "0.4", features = ["serde"] }
 hyper-util = { version = "0.1", features = ["client", "client-legacy", "tokio"] }
 hyper = { version = "1.1", features = ["client", "http1"] }
+indexmap = "2.1.0"
 
 [dev-dependencies]
 criterion = { version = "0.5", features = ["async_tokio"] }
