--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,8 @@ env_logger = "0.11.6"
 async-trait = "0.1.77"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-chrono = "0.4"
-clickhouse = "0.13.1"
+chrono = { version = "0.4", features = ["serde"] }
+clickhouse = { version = "0.13.2", features = ["chrono"] }
 indexmap = "2.7.1"
+kameo = "0.15.0"
+dashmap = "6.1.0"
