--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,21 +4,21 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-kafka-protocol = { version = "0.14.1", features = ["messages_enums", "broker"] }
-tokio = { version = "1.43.0", features = ["full"] }
+kafka-protocol = { version = "0.14", features = ["messages_enums", "broker"] }
+tokio = { version = "1", features = ["full"] }
 futures = "0.3"
 bytes = "1.5"
-tokio-stream = "0.1.17"
-anyhow = "1.0.96"
-log = "0.4.26"
-env_logger = "0.11.6"
-async-trait = "0.1.77"
+tokio-stream = "0.1"
+anyhow = "1.0"
+log = "0.4"
+env_logger = "0.11"
+async-trait = "0.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_repr = "0.1"
 serde_bytes = "0.11"
 chrono = { version = "0.4", features = ["serde"] }
-clickhouse = { version = "0.13.2", features = ["chrono"] }
-indexmap = "2.7.1"
-kameo = "0.15.0"
-dashmap = "6.1.0"
+clickhouse = { version = "0.13", features = ["chrono"] }
+indexmap = "2.7"
+dashmap = "6.1"
+ractor = "0.15"
