--- a/clickhouse-compose/docker-compose.yaml
+++ b/clickhouse-compose/docker-compose.yaml
@@ -1,58 +1,58 @@
 services:
   clickhouse-01:
-    image: "clickhouse/clickhouse-server:25.1"
+    image: "clickhouse/clickhouse-server:25.4"
     user: "${UID}:${GID}"
     container_name: clickhouse-01
     hostname: clickhouse-01
+    restart: always
     volumes:
       - ${PWD}/fs/volumes/clickhouse-01/etc/clickhouse-server/config.d/config.xml:/etc/clickhouse-server/config.d/config.xml:z
       - ${PWD}/fs/volumes/clickhouse-01/etc/clickhouse-server/users.d/users.xml:/etc/clickhouse-server/users.d/users.xml:z
+      - ${PWD}/schemas:/docker-entrypoint-initdb.d:z
     ports:
       - "127.0.0.1:8123:8123"
       - "127.0.0.1:9000:9000"
+    networks:
+      - clickhouse-network
     depends_on:
-      - clickhouse-keeper-01
-      - clickhouse-keeper-02
-      - clickhouse-keeper-03
+      clickhouse-keeper-01:
+        condition: service_healthy
   clickhouse-02:
-    image: "clickhouse/clickhouse-server:25.1"
+    image: "clickhouse/clickhouse-server:25.4"
     user: "${UID}:${GID}"
     container_name: clickhouse-02
     hostname: clickhouse-02
+    restart: always
     volumes:
       - ${PWD}/fs/volumes/clickhouse-02/etc/clickhouse-server/config.d/config.xml:/etc/clickhouse-server/config.d/config.xml:z
       - ${PWD}/fs/volumes/clickhouse-02/etc/clickhouse-server/users.d/users.xml:/etc/clickhouse-server/users.d/users.xml:z
+      - ${PWD}/schemas:/docker-entrypoint-initdb.d:z
     ports:
       - "127.0.0.1:8124:8123"
       - "127.0.0.1:9001:9000"
+    networks:
+      - clickhouse-network
     depends_on:
-      - clickhouse-keeper-01
-      - clickhouse-keeper-02
-      - clickhouse-keeper-03
+      clickhouse-keeper-01:
+        condition: service_healthy
   clickhouse-keeper-01:
-    image: "clickhouse/clickhouse-keeper:25.1"
+    image: "clickhouse/clickhouse-keeper:25.4"
     user: "${UID}:${GID}"
     container_name: clickhouse-keeper-01
     hostname: clickhouse-keeper-01
     volumes:
-     - ${PWD}/fs/volumes/clickhouse-keeper-01/etc/clickhouse-keeper/keeper_config.xml:/etc/clickhouse-keeper/keeper_config.xml:z
+      - ${PWD}/fs/volumes/clickhouse-keeper-01/etc/clickhouse-keeper/keeper_config.xml:/etc/clickhouse-keeper/keeper_config.xml:z
     ports:
-        - "127.0.0.1:9181:9181"
-  clickhouse-keeper-02:
-    image: "clickhouse/clickhouse-keeper:25.1"
-    user: "${UID}:${GID}"
-    container_name: clickhouse-keeper-02
-    hostname: clickhouse-keeper-02
-    volumes:
-     - ${PWD}/fs/volumes/clickhouse-keeper-02/etc/clickhouse-keeper/keeper_config.xml:/etc/clickhouse-keeper/keeper_config.xml:z
-    ports:
-        - "127.0.0.1:9182:9181"
-  clickhouse-keeper-03:
-    image: "clickhouse/clickhouse-keeper:25.1"
-    user: "${UID}:${GID}"
-    container_name: clickhouse-keeper-03
-    hostname: clickhouse-keeper-03
-    volumes:
-     - ${PWD}/fs/volumes/clickhouse-keeper-03/etc/clickhouse-keeper/keeper_config.xml:/etc/clickhouse-keeper/keeper_config.xml:z
-    ports:
-        - "127.0.0.1:9183:9181"
+      - "127.0.0.1:9181:9181"
+    networks:
+      - clickhouse-network
+    healthcheck:
+      test: ["CMD", "nc", "-z", "127.0.0.1", "9181"]
+      interval: 5s
+      timeout: 3s
+      retries: 3
+      start_period: 15s
+
+networks:
+  clickhouse-network:
+    driver: bridge
